# sln

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  SlnOptions.cmake
docs/: docs.md
src/base/: const_string.h
src/core/: CMakeLists.txt  core.cpp  core_define.h  crash.cpp  crash.h  log.cpp  log.h  manifest.cpp  manifest.h  manifest_conf.h.in  standard_paths.cpp  standard_paths.h
src/main/: CMakeLists.txt  main.cpp
